finished the migrations and models

--- a/backend/TESTDATA.html
+++ b/backend/TESTDATA.html
@@ -1,1 +1,1 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aspernatur unde velit earum quia ut eveniet cupiditate sit enim sint impedit fuga veniam atque minus ad aut exercitationem, ex labore officiis recusandae. Id porro possimus accusamus!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, distinctio ex!
