adding links for linkedin in index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Mediums" />
+    <meta name="image" property="og:image"
+      content="https://user-images.githubusercontent.com/13339377/167958224-0292c289-6f42-4e7d-9d74-75ed3fe3690b.JPG">
+    <meta property="og:description"
+      content="An Evernote inspired clone built with React, Redux, Flask, Express, Sequelize and postgreSQL" />
+    <meta property="og:url" content="https://aa-mediums.herokuapp.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
